fix clipboard button not showing in the page

--- a/assets/css/_clipboard.pcss
+++ b/assets/css/_clipboard.pcss
@@ -1,10 +1,17 @@
-pre.highlight {
+pre.copyable {
     position: relative;
 }
 
-pre.highlight .copy {
-    color: white;
+pre.copyable .copy {
     position: absolute;
     right: 1.5rem;
-    top: 0.75rem;
+    top: 0.85rem;
+}
+
+pre.copyable .copy i {
+    font-size: 1.5rem;
+}
+
+pre.copyable .copy:active {
+    transform: translateY(3px);
 }
